--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@
 greenlet==3.0.0; platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
 numpy==1.26.1; python_version < '3.11'
 pandas==2.1.1; python_version >= '3.9'
+psycopg2-binary==2.9.9; python_version >= '3.7'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==1.0.0; python_version >= '3.8'
 pytz==2023.3.post1
