--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
--i https://pypi.org/simple
-/app/cdata-quickbooks-connector-23.0.8669-python3.tar.gz
-greenlet==3.0.0; platform_machine == 'aarch64' or (platform_machine == 'ppc64le' or (platform_machine == 'x86_64' or (platform_machine == 'amd64' or (platform_machine == 'AMD64' or (platform_machine == 'win32' or platform_machine == 'WIN32')))))
-numpy==1.26.1; python_version < '3.11'
-pandas==2.1.1; python_version >= '3.9'
-psycopg2-binary==2.9.9; python_version >= '3.7'
-python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-python-dotenv==1.0.0; python_version >= '3.8'
-pytz==2023.3.post1
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-sqlalchemy==2.0.22; python_version >= '3.7'
-typing-extensions==4.8.0; python_version >= '3.8'
-tzdata==2023.3; python_version >= '2'
+click==8.1.7
+colorama==0.4.6
+greenlet==2.0.1
+lxml==4.9.3
+pip==23.3
+psycopg2==2.9.7
+psycopg2-binary==2.9.7
+python-dotenv==0.21.0
+pywin32==306
+quickbooks-desktop==1.0.1
+setuptools==68.0.0
+SQLAlchemy==2.0.21
+typing_extensions==4.7.1
+wheel==0.41.2
+xmltodict==0.13.0
